tests/fixtures/invalid/pow_dict_none_list.py
# Cannot call pow() with Dict[str, int], None, List[int]
x = pow({"a": 1}, None, [1, 2, 3])
